<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CRMobile</string>
    <string name="txt_citas">Citas</string>
    <string name="txt_clientes">Clientes</string>
    <string name="txt_productos">Productos</string>
    <string name="txt_ventas">Ventas</string>
    <string name="txt_reportes">Reportes</string>
    <string name="txt_pedidos_facturados">Pedidos Facturados</string>
    <string name="txt_clave">Clave</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_descripcionimg">img</string>
    <string name="txt_entrar">Entrar</string>
    <string name="txt_orderId">Order</string>
    <string name="txt_no_pedido">No. Pedido</string>
    <string name="txt_tipo_pedido">Tipo pedido</string>
    <string name="txt_fecha">Fecha</string>
    <string name="txt_cliente">Cliente</string>
    <string name="txt_org_vtas">Org. Ventas</string>
    <string name="txt_moneda">Moneda</string>
    <string name="txt_no_factura">No. Factura</string>
    <string name="txt_importe">Importe</string>
    <string name="txt_material">Material</string>
    <string name="txt_descripcion">Descripcion</string>
    <string name="txt_centro">Centro</string>
    <string name="txt_ciudad">Ciudad</string>
    <string name="txt_um">UM</string>
    <string name="txt_costo">Costo</string>
    <string name="txt_cantidad">Cantidad</string>
    <string name="txt_item">Item</string>
    <string name="txt_stock">Stock</string>
    <string name="txt_precio">Precio</string>
    <string name="txt_Pedidos">Pedidos</string>
    <string name="txt_pedido">Pedido</string>
    <string name="txt_producto">Producto</string>
    <string name="txt_no_cliente">No. Cliente</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_direccion">Dirección</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_rfc">RFC</string>
    <string name="txt_cp">CP</string>
    <string name="txt_telefono">Teléfono</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_horainicio">Hora inicio</string>
    <string name="txt_horafin">Hora fin</string>
    <string name="txt_asunto">Asunto</string>
    <string name="txt_lugar">Lugar</string>
    <string name="txt_edicion_cita">Edición de Cita</string>
    <string name="txt_nueva_cita">Nueva Cita</string>
    <string name="txt_calle">Calle</string>
    <string name="txt_tipo_documento">Tipo documento</string>
    <string name="txt_inmediato">Inmediato</string>
    <string name="txt_normal">Normal</string>
    <string name="txt_numero">Número</string>
    <string name="txt_movil">Móvil</string>
    <string name="txt_usuario">Usuario</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_pais">Pais</string>
    <string name="txt_estatus">Estatus</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
