<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/row_clientes_nombre"
        android:layout_width="@dimen/size80"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/row_clientes_no_cliente"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@+id/row_clientes_no_cliente"
        android:text="@string/txt_nombre" />

    <TextView
        android:id="@+id/row_clientes_direccion"
        android:layout_width="@dimen/size160"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/row_clientes_nombre"
        android:layout_alignBottom="@+id/row_clientes_nombre"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@+id/row_clientes_nombre"
        android:text="@string/txt_direccion" />

    <TextView
        android:id="@+id/row_clientes_estado"
        android:layout_width="@dimen/size80"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/row_clientes_direccion"
        android:layout_alignBottom="@+id/row_clientes_direccion"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@+id/row_clientes_direccion"
        android:text="@string/txt_estado" />

    <TextView
        android:id="@+id/row_clientes_rfc"
        android:layout_width="@dimen/size80"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/row_clientes_estado"
        android:layout_alignBottom="@+id/row_clientes_estado"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@+id/row_clientes_estado"
        android:text="@string/txt_rfc" />

    <TextView
        android:id="@+id/row_clientes_no_cliente"
        android:layout_width="@dimen/size80"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="66dp"
        android:text="@string/txt_no_cliente" />

</RelativeLayout>
