<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/size32"
    android:gravity="center"
    android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size32"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical" >
        
    <TextView
        android:id="@+id/clientes_name_row"
        android:layout_width="@dimen/size80"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/clientes_nocliente_row"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@+id/clientes_nocliente_row"
        android:text="@string/txt_nombre"
        android:textSize="@dimen/size10" />

    <TextView
        android:id="@+id/clientes_address_row"
        android:layout_width="@dimen/size160"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clientes_name_row"
        android:layout_alignBottom="@+id/clientes_name_row"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@+id/clientes_name_row"
        android:text="@string/txt_direccion"
        android:textSize="@dimen/size10" />

    <TextView
        android:id="@+id/clientes_state_row"
        android:layout_width="@dimen/size80"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clientes_address_row"
        android:layout_alignBottom="@+id/clientes_address_row"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@+id/clientes_address_row"
        android:text="@string/txt_estado"
        android:textSize="@dimen/size10" />

    <TextView
        android:id="@+id/clientes_rfc_row"
        android:layout_width="@dimen/size80"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clientes_state_row"
        android:layout_alignBottom="@+id/clientes_state_row"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@+id/clientes_state_row"
        android:text="@string/txt_rfc"
        android:textSize="@dimen/size10" />

    <TextView
        android:id="@+id/clientes_nocliente_row"
        android:layout_width="@dimen/size80"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_no_cliente"
        android:textSize="@dimen/size10" />

    </RelativeLayout>

</LinearLayout>
