<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size32" >

        <FrameLayout
            android:id="@+id/frameLayout7"
            android:layout_width="237dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="1dp"
            android:layout_toRightOf="@id/framelayout11" >

            <TextView
                android:id="@+id/productos_row_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txt_descripcion"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/size10" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="@dimen/size80"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="1dp"
            android:layout_toRightOf="@+id/frameLayout7" >

            <TextView
                android:id="@+id/productos_row_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_stock"
                android:textSize="@dimen/size10" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="@dimen/size80"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="1dp"
            android:layout_toRightOf="@+id/frameLayout3" >

            <TextView
                android:id="@+id/productos_row_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_precio"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/size10" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/framelayout11"
            android:layout_width="@dimen/size80"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <TextView
                android:id="@+id/productos_row_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_material"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/size10" />

        </FrameLayout>
    </RelativeLayout>

</RelativeLayout>